# carbon

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  core.cppm  math.cppm  option.cppm  random.cppm  result.cppm  string.cppm  string_view.cppm  time.cppm  types.cppm
